<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/background_select" >

    <LinearLayout
        android:id="@+id/linearLayoutNote"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewPhotoNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:contentDescription="@string/todo"
            android:maxHeight="200dp"
            android:src="@drawable/ic_photo_white_1dp" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:fontFamily="@font/balootamma_semibold"
            android:maxHeight="75dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingTop="7dp"
            android:paddingBottom="3dp"
            android:text="@string/title"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9.5"
            android:fontFamily="@font/balootamma_regular"
            android:maxHeight="100dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingTop="3dp"
            android:paddingBottom="7dp"
            android:text="@string/note"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>