<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    tools:context=".model.ViewNoteActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigationView"
        app:headerLayout="@layout/header"
        app:menu="@menu/menu_navigation_drawer"
        android:layout_gravity="start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:fontFamily="@font/balootamma_medium"
                android:text="@string/save_note_prompt"
                android:textColor="#545450"
                android:textSize="18sp" />

        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/listViewNote"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayoutViewNote" />

        <ImageView
            android:id="@+id/imageViewNoteAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_note_add_100dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.44" />

        <TextView
            android:id="@+id/textViewPromptNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hi_do_you_want_to_add_a_new_note"
            android:textSize="20sp"
            android:textColor="#545450"
            android:fontFamily="@font/balootamma_medium"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewNoteAdd"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButtonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/round_add_white_48dp"
            app:backgroundTint="#AF5A41"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:fabSize="normal"
            app:elevation="6dp"
            app:borderWidth="0dp"/>

        <RelativeLayout
            android:id="@+id/relativeLayoutViewNote"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/imageButtonMenu"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/todo"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_menu_24dp" />

            <ImageButton
                android:id="@+id/imageButtonPhoto"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_photo_24dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/todo"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"/>
            
            <com.mancj.materialsearchbar.MaterialSearchBar
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:mt_speechMode="false"
                app:mt_hint="Search your notes"
                app:mt_textColor="#545450"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/imageButtonPhoto"
                android:layout_toEndOf="@id/imageButtonMenu"/>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>

